--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "bootstrap": "^4.0.0-beta",
     "font-awesome": "4.7.0",
     "jquery": "^3.2.1",
-    "popper.js": "^1.11.1"
+    "popper.js": "^1.11.1",
+    "typed.js": "^2.0.6"
   },
   "devDependencies": {
     "browser-sync": "2.18.13",
